# csv2stl

./: CMakeLists.txt  MainCPPport.cpp  MainCPPport.h  MainPortThread.cpp  MainPortThread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
plugins/designer/: qquickwidget.debug
plugins/generic/: qtuiotouchplugin.debug
plugins/iconengines/: qsvgicon.debug
plugins/imageformats/: qsvg.debug  qtiff.debug
plugins/networkinformation/: qnetworklistmanager.debug
plugins/qmllint/: quicklintplugin.debug
plugins/qmltooling/: qmldbg_local.debug  qmldbg_native.debug  qmldbg_server.debug  qmldbg_tcp.debug
plugins/sqldrivers/: qsqlmimer.debug  qsqlodbc.debug  qsqlpsql.debug
plugins/tls/: qcertonlybackend.debug
suuresPildisKasutuRn/: txtwritet.cpp
